* www/eclipse/index.html Moved www/development_eclipse.html to the index page of a subdirectory since it seems there will be more than one or two pages on this topic.
* www/development_ide.html
Changed link to moved page.

--- a/www/development_ide.html
+++ b/www/development_ide.html
@@ -1,4 +1,4 @@
-<!-- $Id: development_ide.html,v 1.1 2003/07/30 14:57:08 thierrylach Exp $ -->
+<!-- $Id: development_ide.html,v 1.2 2003/08/01 19:00:36 thierrylach Exp $ -->
 <!doctype html public "-//w3c//dtd html 4.0 transitional//en">
 <html>
 <head>
@@ -64,7 +64,7 @@
             </p>
             
             <ul>
-                <li><a href="development_eclipse.html">Eclipse and Websphere Studio</a></li>
+                <li><a href="eclipse/index.html">Eclipse and Websphere Studio</a></li>
             </ul>
         </td>
     </tr>
