--- a/www/eclipse/index.html
+++ b/www/eclipse/index.html
@@ -1,4 +1,4 @@
-<!-- $Id: development_eclipse.html,v 1.1 2003/07/30 14:57:08 thierrylach Exp $ -->
+<!-- $Id: index.html,v 1.1 2003/08/01 19:00:36 thierrylach Exp $ -->
 <!doctype html public "-//w3c//dtd html 4.0 transitional//en">
 <html>
 <head>
