* www/eclipse/configuration.html Minor color adjustment.

--- a/www/eclipse/configuration.html
+++ b/www/eclipse/configuration.html
@@ -1,4 +1,4 @@
-<!-- $Id: configuration.html,v 1.1 2003/08/01 20:24:53 thierrylach Exp $ -->
+<!-- $Id: configuration.html,v 1.2 2003/08/01 20:28:33 thierrylach Exp $ -->
 <!doctype html public "-//w3c//dtd html 4.0 transitional//en">
 <html>
 <head>
@@ -24,12 +24,12 @@
             </td>
         </tr>
         <tr> 
-            <td width="100%" bgcolor="#cccc99">
+            <td width="100%" bgcolor="#f0f0f0">
                 <img src="labeldecorations.png">
             </td>
         </tr>
         <tr> 
-            <td width="100%" bgcolor="#cccc99">
+            <td width="100%" bgcolor="#f0f0f0">
                 Enable CVS decorations
             </td>
         </tr>
@@ -44,12 +44,12 @@
             </td>
         </tr>
         <tr> 
-            <td width="100%" bgcolor="#cccc99">
+            <td width="100%" bgcolor="#f0f0f0">
                 <img src="codeformatternewlines.png" >
             </td>
         </tr>
         <tr> 
-            <td width="100%" bgcolor="#cccc99">
+            <td width="100%" bgcolor="#f0f0f0">
                 This matches the Scarab code formatting conventions.
             </td>
         </tr>
@@ -64,12 +64,12 @@
             </td>
         </tr>
         <tr> 
-            <td width="100%" bgcolor="#cccc99">
+            <td width="100%" bgcolor="#f0f0f0">
                 <img src="codeformatterstyle.png" >
             </td>
         </tr>
         <tr> 
-            <td width="100%" bgcolor="#cccc99">
+            <td width="100%" bgcolor="#f0f0f0">
                 This matches the Scarab code formatting conventions.
             </td>
         </tr>
@@ -84,12 +84,12 @@
             </td>
         </tr>
         <tr> 
-            <td width="100%" bgcolor="#cccc99">
+            <td width="100%" bgcolor="#f0f0f0">
                 <img src="classpathvariables.png" >
             </td>
         </tr>
         <tr> 
-            <td width="100%" bgcolor="#cccc99">
+            <td width="100%" bgcolor="#f0f0f0">
                 Ensure that TOMCAT_HOME and TORQUE_HOME are set.
             </td>
         </tr>
@@ -104,12 +104,12 @@
             </td>
         </tr>
         <tr> 
-            <td width="100%" bgcolor="#cccc99">
+            <td width="100%" bgcolor="#f0f0f0">
                 <img src="javaeditortyping.png">
             </td>
         </tr>
         <tr> 
-            <td width="100%" bgcolor="#cccc99">
+            <td width="100%" bgcolor="#f0f0f0">
                 Explanation
             </td>
         </tr>
@@ -124,12 +124,12 @@
             </td>
         </tr>
         <tr> 
-            <td width="100%" bgcolor="#cccc99">
+            <td width="100%" bgcolor="#f0f0f0">
                 <img src="filecontent.png">
             </td>
         </tr>
         <tr> 
-            <td width="100%" bgcolor="#cccc99">
+            <td width="100%" bgcolor="#f0f0f0">
                 Make sure the following file extensions are present,
                 and are labelled ASCII.
                 <ul>
