* www/eclipse/cvs_checkout.html * www/eclipse/.project Skeleton for instructions on how to use Eclipse to check out Scarab.

--- a/www/eclipse/cvs_checkout.html
+++ b/www/eclipse/cvs_checkout.html
@@ -1,4 +1,4 @@
-<!-- $Id: cvs_checkout.html,v 1.1 2003/08/01 20:37:26 thierrylach Exp $ -->
+<!-- $Id: cvs_checkout.html,v 1.2 2003/08/01 20:59:06 thierrylach Exp $ -->
 <!doctype html public "-//w3c//dtd html 4.0 transitional//en">
 <html>
 <head>
@@ -24,6 +24,12 @@
             <p>
                 <a href="scarab.psf">Eclipse Team Project Set for Scarab</a>
             </p>
+        </td>
+        <td bgcolor="#f0f0f0">
+            <p>
+                <a href=".project">Eclipse Project File for Scarab</a>
+            </p>
+        </td>
     </tr>
 </table>
 </body>
