removed my email and put dlr's there instead.
jonscott

--- a/www/project_docs.html
+++ b/www/project_docs.html
@@ -1,4 +1,4 @@
-<!-- $Id: project_docs.html,v 1.45 2003/07/30 15:06:00 thierrylach Exp $ -->
+<!-- $Id: project_docs.html,v 1.46 2003/08/08 15:49:13 jon Exp $ -->
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2//EN">
 <html>
 
@@ -47,7 +47,7 @@
             <ul>
                 <li>Scarab runs out of the box on a minimal instance of Tomcat 4.1.x</li>
                 <li><a href="resin.html">Resin</a> (setup is quite easy)</li>
-                <li>Email jon NOSPAM collab.net if you have other documentation / experience
+                <li>Email dlr NOSPAM collab.net if you have other documentation / experience
                     with application servers and Scarab to contribute.</li>
             </ul>
             
