--- a/www/project_tools.html
+++ b/www/project_tools.html
@@ -1,14 +1,16 @@
-<!-- $Id: project_tools.html,v 1.9 2003/05/12 11:28:40 linus Exp $ -->
+<!-- $Id: project_tools.html,v 1.10 2003/08/11 19:05:43 linus Exp $ -->
+<div><small><a href="/servlets/ProjectNewsList">News</a></small></div>  
+<div><small><a href="/project_bugs.html">Bugs and Issues</a></small></div>
+<div><small><a href="/servlets/ProjectMemberList">Membership</a></small></div>
+<div><small><a href="/servlets/ProjectMailingListList">Mailing lists</a></small></div> 
+<div><small><a href="/servlets/ProjectDocumentList">File Sharing</a></small></div>
+<div><small><a href="/documentation/projectsource/">Source code</a></small></div>
+<div><small><a href="/dev.html">Developer Zone</a></small></div>
+
+<strong><a href="/servlets/ProjectHome">Using ArgoUML</a></strong>
 <div><small><a href="/documentation/">Documentation</a></small></div>
 <div><small><a href="/documentation/defaulthtml/quick-guide/">Quick guide</a></small></div>
 <div><small><a href="/documentation/defaulthtml/manual/">User Manual</a></small></div>
 <div><small><a href="/faqs/users.html">FAQ</a></small></div>
 <div><small><a href="/tours/">Tour</a></small></div>
-<div><small><a href="/servlets/ProjectNewsList">News</a></small></div>  
 <div><small><a href="/servlets/ProjectDocumentList">Downloads</a></small></div>
-<div><small><a href="/servlets/ProjectMailingListList">Mailing lists</a></small></div> 
-
-<div><small><a href="/servlets/ProjectMemberList">Membership</a></small></div>
-<div><small><a href="/documentation/projectsource/">Source code</a></small></div>
-<div><small><a href="/project_bugs.html">Bugs and Issues</a></small></div>
-<div><small><a href="/dev.html">Developer Zone</a></small></div>
