Small adjustment on the formatting.

--- a/www/project_tools.html
+++ b/www/project_tools.html
@@ -1,4 +1,4 @@
-<!-- $Id: project_tools.html,v 1.10 2003/08/11 19:05:43 linus Exp $ -->
+<!-- $Id: project_tools.html,v 1.11 2003/08/11 19:14:14 linus Exp $ -->
 <div><small><a href="/servlets/ProjectNewsList">News</a></small></div>  
 <div><small><a href="/project_bugs.html">Bugs and Issues</a></small></div>
 <div><small><a href="/servlets/ProjectMemberList">Membership</a></small></div>
@@ -6,7 +6,9 @@
 <div><small><a href="/servlets/ProjectDocumentList">File Sharing</a></small></div>
 <div><small><a href="/documentation/projectsource/">Source code</a></small></div>
 <div><small><a href="/dev.html">Developer Zone</a></small></div>
+  </div>
 
+  <div id="tools" class="focus">
 <strong><a href="/servlets/ProjectHome">Using ArgoUML</a></strong>
 <div><small><a href="/documentation/">Documentation</a></small></div>
 <div><small><a href="/documentation/defaulthtml/quick-guide/">Quick guide</a></small></div>
