--- a/www/project_tools.html
+++ b/www/project_tools.html
@@ -1,7 +1,7 @@
-<!-- $Id: project_tools.html,v 1.12 2003/08/11 20:42:43 linus Exp $ -->
+<!-- $Id: project_tools.html,v 1.13 2003/08/12 22:02:14 linus Exp $ -->
 <div><small><a href="/servlets/ProjectNewsList">News</a></small></div>  
 <div><small><a href="/project_bugs.html">Bugs and Issues</a></small></div>
-<div><small><a href="/documentation/defaulthtml/cookbook/">Cookbook</a></div>
+<div><small><a href="/documentation/defaulthtml/cookbook/">Cookbook</a></small></div>
 <div><small><a href="/servlets/ProjectMemberList">Membership</a></small></div>
 <div><small><a href="/servlets/ProjectMailingListList">Mailing lists</a></small></div> 
 <div><small><a href="/servlets/ProjectDocumentList">File Sharing</a></small></div>
