*** empty log message ***

--- a/buildnotes_jdt-core.html
+++ b/buildnotes_jdt-core.html
@@ -63,7 +63,7 @@ Numerous single type imports can slow compiler down significantly
 org.eclipse.jdt.core.Signature cannot resolve complex type that has package name starting with letters as any primitive type
 <br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=38633">38633</a>
 Search should not open requested types with match locator parser
-<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=40954">40954</a>
+<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=40954">40954</a>
 ArrayIndexOutOfBoundsException during sort members
 <br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=40804">40804</a>
 NPE in MethodBinding.sourceMethod()
