--- a/buildnotes_jdt-core.html
+++ b/buildnotes_jdt-core.html
@@ -45,7 +45,9 @@ What's new in this drop</h2>
 </ul>
 
 <h3>Problem Reports Fixed</h3>
-<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=40681">40681</a>
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=36271">36271</a>
+CodeAssist should treat array.clone() as visible
+<br<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=40681">40681</a>
 no warnings for some externalized strings
 <br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=40584">40584</a>
 Test suite configuration should be more flexible
