--- a/buildnotes_jdt-core.html
+++ b/buildnotes_jdt-core.html
@@ -45,7 +45,9 @@ What's new in this drop</h2>
 </ul>
 
 <h3>Problem Reports Fixed</h3>
-<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=36271">36271</a>
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=40779">40779</a>
+Primary working copies: no deltas on destroy 
+<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=36271">36271</a>
 CodeAssist should treat array.clone() as visible
 <br<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=40681">40681</a>
 no warnings for some externalized strings
