--- a/buildnotes_jdt-core.html
+++ b/buildnotes_jdt-core.html
@@ -45,7 +45,9 @@ What's new in this drop</h2>
 </ul>
 
 <h3>Problem Reports Fixed</h3>
-<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=39831">39831</a>
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=41805">41805</a>
+ArrayIndexOutOfBoundsException while creating AST
+<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=39831">39831</a>
 Search finds only "inexact" matches 
 <br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=35980">35980</a>
 illegal code completion suggested (abstract methods) 
