--- a/buildnotes_jdt-core.html
+++ b/buildnotes_jdt-core.html
@@ -81,7 +81,9 @@ to rather highlight the caught exception type instead of entire catch block.
 </ul>
 
 <h3>Problem Reports Fixed</h3>
-<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=41604">41604</a>
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=41373">41373</a>
+SourceField.getConstant() returns null for final fields set in initializer
+<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=41604">41604</a>
 Possible Compiler Bug 
 <br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=22976">22976</a>
 DCR - warning for unused declarations of thrown exceptions
