--- a/buildnotes_jdt-core.html
+++ b/buildnotes_jdt-core.html
@@ -81,7 +81,9 @@ to rather highlight the caught exception type instead of entire catch block.
 </ul>
 
 <h3>Problem Reports Fixed</h3>
-<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=40937">40937</a>
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=41534">41534</a>
+incorrect shadowing reported by rename [refactoring] 
+<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=40937">40937</a>
 ISourceReference.getSource throws ArrayIndexOutOfBoundsException 
 <br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=41373">41373</a>
 SourceField.getConstant() returns null for final fields set in initializer
