[feature]added infrastructure for global cut/copy/paste and more documentation, added cut/copy/paste/delete functionality to composer texteditor/attachmenteditor

--- a/src/mail/independent/org/columba/mail/imap/protocol/package.html
+++ b/src/mail/independent/org/columba/mail/imap/protocol/package.html
@@ -27,7 +27,22 @@ All Rights Reserved.
 <body bgcolor="white">
 
 Protocol implementation of IMAP4 rev1 as specified by RFC 3501 (obsolete RFC 2060)
-
+<p>
+<ul>
+ <li> <a href="http://www.zvon.org/tmRFC/RFC2192/Output/index.html">RFC 2192 - IMAP URL Scheme</a></li>
+ <li> <a href="http://www.zvon.org/tmRFC/RFC2595/Output/index.html">RFC 2595 -  Using TLS with IMAP, POP3 and ACAP</a></li>
+ <li> <a href="http://www.zvon.org/tmRFC/RFC3502/Output/index.html">RFC 3502 -  Internet Message Access Protocol (IMAP) - MULTIAPPEND Extension</a></li>
+ <li> <a href="http://www.zvon.org/tmRFC/RFC2195/Output/index.html"></a></li>
+ <li> <a href="http://www.zvon.org/tmRFC/RFC2195/Output/index.html">RFC 2195 - IMAP/POP AUTHorize Extension for Simple Challenge/Response</a></li>
+ <li> <a href="http://www.zvon.org/tmRFC/RFC2342/Output/index.html"></a></li>
+ <li> <a href="http://www.zvon.org/tmRFC/RFC2342/Output/index.html">RFC 2342 - IMAP4 Namespace</a> </li>
+ <li> <a href="http://www.zvon.org/tmRFC/RFC2359/Output/index.html">RFC 2395 -  IMAP4 UIDPLUS extension</a> </li>
+ <li> <a href="http://www.zvon.org/tmRFC/RFC2087/Output/index.html">RFC 2987 -  IMAP4 QUOTA extension</a> </li>
+ <li> <a href="http://www.zvon.org/tmRFC/RFC2086/Output/index.html">RFC 2986 -  IMAP4 ACL extension</a> </li>
+ <li> <a href="http://www.zvon.org/tmRFC/RFC2088/Output/index.html">RFC 2088 -  IMAP4 non-synchronizing literals</a> </li>
+ <li> <a href="http://www.zvon.org/tmRFC/RFC2180/Output/index.html">RFC 2180 -  IMAP4 Multi-Accessed Mailbox Practice</a> </li>
+ <li> <a href="http://www.zvon.org/tmRFC/RFC2683/Output/index.html">RFC 2683 -  IMAP4 Implementation Recommendations</a> </li>
+</ul>
 
 </body>
 </html>
