--- a/src/mail/independent/org/columba/mail/pop3/protocol/package.html
+++ b/src/mail/independent/org/columba/mail/pop3/protocol/package.html
@@ -27,7 +27,16 @@ All Rights Reserved.
 <body bgcolor="white">
 
 Low level implementation of the Post Office Protocol Version 3 (POP3) as 
-specified by RFC 1939
+specified by RFC 1939.
+
+Some more important RFCs:
+<ul>
+ <li><a href="http://www.zvon.org/tmRFC/RFC1939/Output/index.html">RFC 1939 - Post Office Protocol Version 3</a> </li>
+ <li><a href="http://www.zvon.org/tmRFC/RFC2449/Output/index.html">RFC 2249 - POP3 Extension Mechanism</a> </li>
+ <li><a href="http://www.zvon.org/tmRFC/RFC2595/Output/index.html">RFC 2595 - Using TLS with IMAP, POP3 and ACAP</a> </li>
+ <li><a href="http://www.zvon.org/tmRFC/RFC1734/Output/index.html">RFC 1734 - POP3 AUTHentication command</a></li>
+ 
+</ul>
 
 
 </body>
