--- a/src/mail/independent/org/columba/mail/smtp/package.html
+++ b/src/mail/independent/org/columba/mail/smtp/package.html
@@ -26,7 +26,15 @@ All Rights Reserved.
 </head>
 <body bgcolor="white">
 
-Low level implementation of the SMTP Protocol as specified by RFC 821 
+Low level implementation of the SMTP Protocol as specified by RFC 2821.
+<p>
+List of RFCs:
+<ul>
+ <li> <a href="http://www.zvon.org/tmRFC/RFC2821/Output/index.html">RFC 2821 - Simple Mail Transfer Protocol</a> </li>
+ <li> <a href="http://www.zvon.org/tmRFC/RFC2195/Output/index.html">RFC 2195 - IMAP/POP AUTHorize Extension for Simple Challenge/Response</a> </li>
+ <li> <a href="http://www.zvon.org/tmRFC/RFC1957/Output/index.html"> Some Observations on Implementations of the Post Office Protocol (POP3)</a> </li>
+ <li> <a href=""></a> </li>
+</ul>
 
 
 </body>
