--- a/src/mail/independent/org/columba/mail/ssl/package.html
+++ b/src/mail/independent/org/columba/mail/ssl/package.html
@@ -27,7 +27,9 @@ All Rights Reserved.
 <body bgcolor="white">
 
 SSL/TSL authentication support mechanism
+<p>
 
+<a href="http://www.zvon.org/tmRFC/RFC2595/Output/index.html">RFC 2595 - Using TLS with IMAP, POP3 and ACAP</a>
 
 </body>
 </html>
