--- a/src/columba/core/org/columba/core/gui/focus/package.html
+++ b/src/columba/core/org/columba/core/gui/focus/package.html
@@ -26,8 +26,37 @@ All Rights Reserved.
 </head>
 <body bgcolor="white">
 
-Focus management.
+Provides focus management.
 
+
+<h1>Examples of workflow:</h1>
+
+<h3>Example: Imagine a user selecting <pre>Edit->Copy</pre></h3>
+  <p>
+  FocusManager checks if a component owns the focus currenlty. This is not
+  the case, because the JMenu has the focus. The fall back is to use the
+  last available focus owner, which could be a JTextField, etc.
+  
+  Then FocusManager calls the CopyAction implementation of the JTextField.
+  </p>
+  
+<h3>Example: Imagine a user selects a text in a JTextField and presses Ctrl-C
+           to copy the text in the clipboard</h3>
+  <p>
+  This means the JTextField already has the focus. The KeyListener of the
+  JTextField detects that Ctrl-C is pressed. It calls the copyAction of
+  FocusManager. FocusManager uses the currently selected Component, which
+  is in fact the JTextField and executes its CopyAction.
+  </p>
+  
+<h3>Example: User switches focus between two JTextFields</h3>
+  <p>
+  The JTextField implements FocusListener (focusList() and focusGained()).
+  Both methods call the correspoding methods of FocusManager.
+  FocusManager asks the currently selected component, which is a
+  FocusOwner implementation, which actions are enabled/disabled and
+  notifies the gui to reflect these changes.
+<p>
 
 </body>
 </html>
