[intern]added documentation

--- a/src/columba/core/org/columba/core/gui/frame/package.html
+++ b/src/columba/core/org/columba/core/gui/frame/package.html
@@ -30,7 +30,7 @@ Model-View-Controller based frame package.
 
 All components use this package to which creates a simple frame with basic
 menu, toolbar and statusbar. Mail and addressbook plug themselves in this
-frame and provide custom functionality.
+frame and provide customized functionality.
 
 
 
