[intern]more documentation

--- a/src/columba/core/org/columba/core/gui/frame/package.html
+++ b/src/columba/core/org/columba/core/gui/frame/package.html
@@ -32,6 +32,9 @@ All components use this package to which creates a simple frame with basic
 menu, toolbar and statusbar. Mail and addressbook plug themselves in this
 frame and provide customized functionality.
 
+It would be a good idea to provide a framework, which distinguishs 
+multiview from singleview frames. Depending on what you like you could
+just extend the correct class.
 
 
 </body>
