[feature]added first context-specific buttons, provided documentation on how to add even more, updated usermanul.jar to the most recent version

--- a/src/columba/core/org/columba/core/help/package.html
+++ b/src/columba/core/org/columba/core/help/package.html
@@ -27,9 +27,39 @@ All Rights Reserved.
 <body bgcolor="white">
 
 Online help framework using JavaHelp.
+<p>
 
+<h3>Adding context-specific help to a button</h3>
+<pre>
+ HelpManager.enableHelpOnButton(helpButton, "configuring_columba");
+</pre>
+This associates the help button (JButton) with the topic ID. 
 
+<h3>Looking up topic ID</h3>
 
+See the file jhelpmap.jhm, which associates topic IDs with html files.
+All files can be found in package lib/usermanual.jar.
+<p>
+I've used a very general schema to generate topic IDs.
+Following a couple of examples, so you don't need to lookup every
+single topic ID:
+<ul>
+ <li>index -> index (index.html)</li>
+ <li>introduction -> introduction (ch01.html) </li>
+ <li>installation -> installing (ch02.html) </li>
+ <li>installation_1 -> installating-windows (ch02.html)</li>
+ <li>installation_2 -> installating-linux (ch02_2.html)</li>
+ <li>installation_3 -> installating-generic (ch02_3.html)</li>
+ <li>using_columba_composing_new_email_messages_2 -> composing new email messages (ch04s03.html)</li>
+</ul>
+
+Note that subsections are numbered where sections have names. The last 
+examples is a very interesting one:
+"using_columba" -> section
+"composing_new_email_messages" ->first subsection
+"2" ->second subsection
+
+Hope you get the idea!
 
 </body>
 </html>
