PR 40658:  IJavaProject.getOutputLocation/getRawClasspath require Java nature

--- a/buildnotes_jdt-core.html
+++ b/buildnotes_jdt-core.html
@@ -81,7 +81,9 @@ to rather highlight the caught exception type instead of entire catch block.
 </ul>
 
 <h3>Problem Reports Fixed</h3>
-<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=42196">42196</a>
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=40658">40658</a>
+IJavaProject.getOutputLocation/getRawClasspath require Java nature
+<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=42196">42196</a>
 Method popup extremely slow for JOGL code 
 <br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=41534">41534</a>
 incorrect shadowing reported by rename [refactoring] 
