--- a/notes/API_changes.html
+++ b/notes/API_changes.html
@@ -491,5 +491,76 @@ IJavaElement getPrimaryElement();
 <h2>Converting to the new API</h2>
 	TODO
 
+<hr><h1>Read <code>.classpath</code> file contents even if project has not the java nature yet</h1>
+	Last edit: 2003/09/01 (->M4)
+<h2>Problem description</h2>
+In 2.0 it was allowed to access IJavaProject.getOutputLocation/getRawClasspath on a project where the JavaNature was not set yet. Since 2.1 a
+JavaModelException is thrown if that happens.
+For example, the new Java project wizard does this if a .classpath file is found at the
+location where the project will be created.
+<h2>Problem resolution</h2>
+
+	Added API <code>IJavaProject#readRawClasspath()</code> to allow user to read the raw classpath from <code>.classpath</code> disk file
+	on a java project which java nature has not been set yet.
+	<pre>
+/**
+ * Returns the raw classpath for the project as defined by its <code>.classpath</code> file from disk, or <code>null</code>
+ * if unable to read the file. 
+ * <p>
+ * This classpath may differ from the in-memory classpath returned by <code>getRawClasspath</code>, in case the 
+ * automatic reconciliation mechanism has not been performed yet. Usually, any change to the <code>.classpath</code> file 
+ * is automatically noticed and reconciled at the next resource change notification event. 
+ * However, if the file is modified within an operation, where this change needs to be taken into account before the 
+ * operation ends, then the classpath from disk can be read using this method, and further assigned to the project 
+ * using <code>setRawClasspath(...)</code>.
+ * <p>
+ * A raw classpath may contain classpath variable and/or container entries. Classpath variable entries can be resolved 
+ * individually (see <code>JavaCore#getClasspathVariable</code>), or the full classpath can be resolved at once using the 
+ * helper method <code>getResolvedClasspath</code>.
+ * TODO (jim) please reformulate to include classpath containers in resolution aspects
+ * <p>
+ * Note that no check is performed whether the project has the Java nature set, allowing an existing <code>.classpath</code> 
+ * file to be considered independantly (unlike <code>getRawClasspath</code> which requires the Java nature to be associated 
+ * with the project). 
+ * 
+ * @return the raw classpath from disk for the project, as a list of classpath entries
+ * @see #getRawClassPath
+ * @see IClasspathEntry
+ * @since 3.0
+ */
+	</pre>
+
+	Added API <code>IJavaProject#readOutputLocation()</code> to allow user to read the output location from <code>.classpath</code> disk file
+	on a java project which java nature has not been set yet.
+	<pre>
+/**
+ * Returns the default output location for the project as defined by its <code>.classpath</code> file from disk, or <code>null</code>
+ * if unable to read the file. 
+ * <p>
+ * This output location may differ from the in-memory one returned by <code>getOutputLocation</code>, in case the 
+ * automatic reconciliation mechanism has not been performed yet. Usually, any change to the <code>.classpath</code> file 
+ * is automatically noticed and reconciled at the next resource change notification event. 
+ * However, if the file is modified within an operation, where this change needs to be taken into account before the 
+ * operation ends, then the output location from disk can be read using this method, and further assigned to the project 
+ * using <code>setRawClasspath(...)</code>.
+ * <p>
+ * The default output location is where class files are ordinarily generated
+ * (and resource files, copied). Each source classpath entry can also
+ * specify an output location for the generated class files (and copied
+ * resource files) corresponding to compilation units under that source
+ * folder. This makes it possible to arrange generated class files for
+ * different source folders in different output folders, and not
+ * necessarily the default output folder. This means that the generated
+ * class files for the project may end up scattered across several folders,
+ * rather than all in the default output folder (which is more standard).
+ * 
+ * @return the workspace-relative absolute path of the default output folder
+ * @see #getOutputLocation
+ * @since 3.0
+ */
+	</pre>
+<h2>Converting to the new API</h2>
+	TODO
+
 </body>
 </html>
