--- a/buildnotes_jdt-core.html
+++ b/buildnotes_jdt-core.html
@@ -86,7 +86,9 @@ a new Java project creation and before that reconciliation mechanism has been pe
 </ul>
 
 <h3>Problem Reports Fixed</h3>
-<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=40793">40793</a>
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=40383">40383</a>
+Search - should only special treat unsaved working copies 
+<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=40793">40793</a>
 Primary working copies: Type search does not find type in modified CU 
 <br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=40658">40658</a>
 IJavaProject.getOutputLocation/getRawClasspath require Java nature
