--- a/www/project_schedule.html
+++ b/www/project_schedule.html
@@ -1,4 +1,4 @@
-<!-- $Id: project_schedule.html,v 1.70 2003/08/24 01:20:43 linus Exp $ -->
+<!-- $Id: project_schedule.html,v 1.71 2003/09/02 00:17:32 linus Exp $ -->
 <HTML>
 <HEAD>
 	<TITLE>ArgoUML Release Plan</TITLE>
@@ -28,9 +28,11 @@ Planned date: 2003-09-06
 
 <h4>ArgoUML release 0.15.2</h4>
 Planned date: 2003-10-11
+<!--
 <ul>
-<li>Panel positioning (Responsibled: Bob Tarling)
+<li>Panel positioning (Responsible: Bob Tarling)
 </ul>
+-->
 
 <h4>ArgoUML release 0.15.3</h4>
 Planned date: 2003-11
