--- a/buildnotes_jdt-core.html
+++ b/buildnotes_jdt-core.html
@@ -42,6 +42,9 @@ Eclipse SDK 3.0M4 Build - ?th September 2003
 <h2>
 What's new in this drop</h2>
 <ul>
+<li>Default compiler compliance setting got raised to 1.4 level. Default source level is 1.3, and default target level is 1.2.
+To ease the 1.4 migration, the default severity for optional problem 'assert used as identifier' got raised to warning.
+</li>
 </ul>
 
 <h3>Problem Reports Fixed</h3>
