Added accelerator to the toggle of the Logger tree (ALT-T), plus updated the Welcome html to reflect that.
Modified the Expand/Collapse icons to be just +/- characters
rather than the magnify icon, as this is more intuitive.

Will use the Magnify etc icons for a "Focus On.." concept
similar to Eclipse's Hierarchy view, which effectively places a simple
logger filter on the model.

--- a/src/java/org/apache/log4j/chainsaw/WelcomePanel.html
+++ b/src/java/org/apache/log4j/chainsaw/WelcomePanel.html
@@ -58,12 +58,15 @@
 <tr valign="top">
 	<td nowrap class="HotKey">ALT-P</td>
 	<td width="50" align="center">-</td>
-	<td colspan="4">Pause display</td>
+	<td colspan="4">Purges current panels events</td>
 </tr>
 <tr valign="top" bgcolor="#EEEEEE">
 	<td nowrap class="HotKey">ALT-D</td>
 	<td width="50" align="center">-</td>
-	<td colspan="4">Show/Hide the Detail pane</td>
+	<td colspan="1">Show/Hide the Detail pane</td>
+	<td nowrap class="HotKey">ALT-T</td>
+	<td width="50" align="center">-</td>
+	<td colspan="1">Show/Hide the Logger Tree pane</td>
 </tr>
 <tr valign="top">
 	<td nowrap class="HotKey">ALT-X</td>
