Delete action and Pause action seemed to share the same accelerator, so when you wanted to pause it actually removed all the events from the view.
nice.

Updated the Welcome help file with the correct hot keys.

--- a/src/java/org/apache/log4j/chainsaw/WelcomePanel.html
+++ b/src/java/org/apache/log4j/chainsaw/WelcomePanel.html
@@ -51,12 +51,12 @@
 	<td nowrap class="HotKey">CTRL-O</td>
 	<td width="50" align="center">-</td>
 	<td>Shows a File Open dialog to open an XML file of events into Chainsaw</td>
-	<td nowrap class="HotKey">F12</td>
+	<td nowrap class="HotKey">ALT-P or F12</td>
 	<td width="50" align="center">-</td>
 	<td>Pause display</td>
 </tr>
 <tr valign="top">
-	<td nowrap class="HotKey">ALT-P</td>
+	<td nowrap class="HotKey">ALT-C or CTRL-BACKSPACE</td>
 	<td width="50" align="center">-</td>
 	<td colspan="4">Purges current panels events</td>
 </tr>
