--- a/buildnotes_jdt-core.html
+++ b/buildnotes_jdt-core.html
@@ -48,7 +48,9 @@ To ease the 1.4 migration, the default severity for optional problem 'assert use
 </ul>
 
 <h3>Problem Reports Fixed</h3>
-<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=42366">42366</a>
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=39887">39887</a>
+Resource exception while indexing
+<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=42366">42366</a>
 Classpath validation error message removed while rebuilding a project.
 <br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=41680">41680</a>
 Unnecessary cast  wrongly reported
