--- a/www/project_schedule.html
+++ b/www/project_schedule.html
@@ -1,4 +1,4 @@
-<!-- $Id: project_schedule.html,v 1.71 2003/09/02 00:17:32 linus Exp $ -->
+<!-- $Id: project_schedule.html,v 1.72 2003/09/03 19:41:39 linus Exp $ -->
 <HTML>
 <HEAD>
 	<TITLE>ArgoUML Release Plan</TITLE>
@@ -22,7 +22,6 @@ The main branch is always working towards the future.
 <h4>ArgoUML release 0.15.1</h4>
 Planned date: 2003-09-06
 <ul>
-<li>Sequence Diagrams new implementation (Responsible: Jaap Branderhorst)
 <li>Toolbar implemented using Toolbar library (Responsible: Bob Tarling)
 </ul>
 
@@ -35,7 +34,10 @@ Planned date: 2003-10-11
 -->
 
 <h4>ArgoUML release 0.15.3</h4>
-Planned date: 2003-11
+Planned date: 2003-11-15
+<ul>
+<li>Sequence Diagrams new implementation (Responsible: Jaap Branderhorst)
+</ul>
 
 <h4>ArgoUML release 0.15.4</h4>
 Planned date: 2003-12
