--- a/buildnotes_jdt-core.html
+++ b/buildnotes_jdt-core.html
@@ -48,6 +48,8 @@ To ease the 1.4 migration, the default severity for optional problem 'assert use
 </ul>
 
 <h3>Problem Reports Fixed</h3>
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=42443">42443</a>
+Error when inner class name has the same name than another class, but with not the same case sensitive
 <a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=42459">42459</a>
 DebugEvaluationTests don't run if target is 1.2
 <br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=39887">39887</a>
