*** empty log message ***

--- a/buildnotes_jdt-core.html
+++ b/buildnotes_jdt-core.html
@@ -224,7 +224,8 @@ NPE in type hierarchy when opening type
 NPE in TypeHierarchy.packageRegionContainsSamePackageFragment(TypeHierarchy.java:1314) 
 <br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=40090">40090</a>
 No need to close Java model on shutdown 
-
+<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=42589">42589</a>
+jck1.4a failures
 
 <p><hr><h1>
 Eclipse Platform Build Notes&nbsp;<br>
