--- a/buildnotes_jdt-core.html
+++ b/buildnotes_jdt-core.html
@@ -48,7 +48,9 @@ To ease the 1.4 migration, the default severity for optional problem 'assert use
 </ul>
 
 <h3>Problem Reports Fixed</h3>
-<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=42614">42614</a>
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=42629">42629</a>
+javac error message with missing classpath entry when claims entry dropped from path 
+<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=42614">42614</a>
 1.3 compliant mode should select default enclosing instance
 <br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=42588">42588</a>
 Incorrect selection of current enclosing instance
