*** empty log message ***

--- a/buildnotes_jdt-core.html
+++ b/buildnotes_jdt-core.html
@@ -187,6 +187,8 @@ Eclipse SDK 3.0M3 Build - 19th August 2003
 <h2>
 What's new in this drop</h2>
 <ul>
+<li>In 1.4 mode, the compiler is now JCK 1.4a compliant (previously was passing JCK1.4).
+</li>
 <li>To reduce the memory consumption and improve performance, the following new APIs were added:
 <ul>
 <li>AST.parsePartialCompilationUnit(ICompilationUnit unit, int position, boolean resolveBindings)</li>
