[intern]removed obsolete classes, more documentation

--- a/src/mail/core/org/columba/mail/gui/tree/selection/package.html
+++ b/src/mail/core/org/columba/mail/gui/tree/selection/package.html
@@ -26,9 +26,9 @@ All Rights Reserved.
 </head>
 <body bgcolor="white">
 
-Provides selection handling for the table component.
+Provides selection handling for the tree component.
 <p>
-Follow these steps if you want to listen to table selection changes:
+Follow these steps if you want to listen to tree selection changes:
 <p>
 <ul>
  <li>
@@ -38,11 +38,11 @@ Follow these steps if you want to listen to table selection changes:
   This also means overwriting <class>public void selectionChanged(SelectionChangedEvent e)</class>
  </li>
  <li>
-  Don't forget to cast <class>SelectionChangedEvent</class> to <class>TableSelectionChangedEvent</class>
+  Don't forget to cast <class>SelectionChangedEvent</class> to <class>TreeSelectionChangedEvent</class>
  </li>
 </ul>
 
-@see org.columba.mail.gui.table.action
+@see org.columba.mail.gui.tree.action
 
 </body>
 </html>
