removed link pointing to the old runbox which caused confusion when it redirected to the live server.

--- a/www/faq.html
+++ b/www/faq.html
@@ -6,7 +6,7 @@
 <body bgcolor="#ffffff">
 
 <h2>Scarab - Frequently Asked Questions</h2>
-<h4>$Id: faq.html,v 1.24 2003/05/19 20:41:08 dlr Exp $</h4>
+<h4>$Id: faq.html,v 1.25 2003/09/11 15:06:22 jmcnally Exp $</h4>
 
 <hr noshade="noshade" size="1" />
 
@@ -482,16 +482,23 @@ The fix is simple, create an A or MX record for your domain entry.
 <hr noshade="noshade" size="1" />
 
 <p><strong>
-I can't seem to access Scarab's self hosting issue tracker on port 8081.
+Can I see Scarab in action without installing it myself?
 </strong></p>
 
 <p>
-This has been fixed. We created a proxy system. Please try to connect on port
-80 now. This is the <a href="http://scarab.collab.net/">http://scarab.collab.net/</a> 
-of the live issue tracker. Please do not use it for testing. If you want to use
-a Scarab instance for testing, please use this address of the instance which is 
+Scarab used to host a test installation that was rebuilt nightly.  This was 
+discontinued when hosts were changed and has not been revived yet.
+Scarab self-hosts as its own issue tracker and you can view a limited set of 
+the functionality at 
+<a href="http://scarab.collab.net/">http://scarab.collab.net/</a> 
+Please do not use it for testing. 
+
+<!-- 
+If you want to use
+a Scarab instance for testing, please use this address of the instance which is
 rebuilt nightly from CVS: 
 <a href="http://scarab.whichever.com/">http://scarab.whichever.com/</a>.
+-->
 </p>
 
 <hr noshade="noshade" size="1" />
