Tweak to be more artifact centric.

--- a/www/index.html
+++ b/www/index.html
@@ -1,16 +1,16 @@
-<!-- $Id: index.html,v 1.36 2003/05/09 22:08:26 dlr Exp $ -->
+<!-- $Id: index.html,v 1.37 2003/09/11 16:54:55 dlr Exp $ -->
 <!doctype html public "-//w3c//dtd html 4.0 transitional//en">
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
-<title>Scarab: Issue Tracking Built for the Ages</title>
+<title>Scarab: Flexible artifact management</title>
 </head>
 <body bgcolor="#F0F0F0">
 <table border="0" cellpadding="2" width="98%" bgcolor="#ffffff" >
     <tr> 
         <td width="100%" bgcolor="#cccc99">
             <b><font face="Arial, Helvetica, sans-serif" color="#000033">
-            Scarab: Issue Tracking Built for the Ages</font></b>
+            Scarab: Flexible artifact management</font></b>
         </td>
     </tr>
     <tr>
@@ -26,19 +26,19 @@
         <td bgcolor="#f0f0f0">
             <p>
             The goal of the Scarab project is to build an
-            Issue/Artifact tracking system that has the following
+            Artifact tracking system that has the following
             features:
             </p>
             
             <ul>
-                <li>A full feature set similar to those found in other Issue/Artifact tracking 
+                <li>A full feature set similar to those found in other Artifact tracking 
                     systems: data entry, queries, reports, notifications to interested 
                     parties, collaborative accumulation of comments, dependency 
                     tracking</li>
                 <li>In addition to the standard features, Scarab has fully
                     customizable and unlimited numbers of 
                     Modules (your various projects),
-                    Issue/Artifact types (Defect, Enhancement, Requirement, etc), 
+                    Artifact types (Defect, Enhancement, Requirement, etc),
                     Attributes (Operating System, Status, Priority, etc),
                     Attribute options (P1, P2, P3) which can all be defined 
                     on a per Module basis so that each of your modules is
