*** empty log message ***

--- a/buildnotes_jdt-core.html
+++ b/buildnotes_jdt-core.html
@@ -46,7 +46,9 @@ What's new in this drop</h2>
 </ul>
 
 <h3>Problem Reports Fixed</h3>
-<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=42856">42856</a>
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=43080">43080</a>
+NPE when searching in CU with incomplete method declaration 
+<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=42856">42856</a>
 CodeAssist - Does not work after an inner type reference
 <br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=42839">42839</a>
 Incorrect position in org.eclipse.jdt.core.dom.ArrayType
