Add missing <br>

--- a/buildnotes_jdt-core.html
+++ b/buildnotes_jdt-core.html
@@ -48,7 +48,7 @@ What's new in this drop</h2>
 <h3>Problem Reports Fixed</h3>
 <a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=43089">43089</a>
 Search engine doesn't report all matches
-<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=43080">43080</a>
+<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=43080">43080</a>
 NPE when searching in CU with incomplete method declaration 
 <br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=42856">42856</a>
 CodeAssist - Does not work after an inner type reference
